# QUEEN_GA_WITH_MPI

./: CMakeLists.txt  main.cpp
